# scapes

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  launch.sh  make.sh
res/: assets.sh
res/blocks/: liquid_vertex_data.txt  solid_vertex_data.txt
res/meshes/: cube_vertex_data.txt  quad_vertex_data.txt  skybox_vertex_data.txt
res/shaders/: base.frag  base.vert  line.frag  line.vert  liquid.frag  liquid.vert  model.fs  model.vs  skybox.frag  skybox.vert  solid.frag  solid.vert
scripts/: assets.sh  launch.sh  make.sh  modify.sh
src/: main.cpp
src/core/: Application.cpp  Application.h  Clock.cpp  Clock.h  Engine.cpp  Engine.h  Input.cpp  Input.h  Logger.cpp  Logger.h
src/gl/: AABB.cpp  AABB.h  Camera.cpp  Camera.h  Cubemap.cpp  Cubemap.h  Mesh.cpp  Mesh.h  Object.cpp  Object.h  Shader.cpp  Shader.h  Skybox.cpp  Skybox.h  Sprite.cpp  Sprite.h  Texture.cpp  Texture.h  Tilemap.cpp  Tilemap.h  Transform.cpp  Transform.h
src/manager/: BlockManager.cpp  BlockManager.h  ChunkManager.cpp  ChunkManager.h  EntityManager.cpp  EntityManager.h  ShaderManager.cpp  ShaderManager.h
src/player/: Raycast.cpp  Raycast.h
src/util/: Logger.h  Mesh.h  ModuleData.h  Time.h
src/view/: Camera2D.cpp  Camera2D.h  Camera3D.cpp  Camera3D.h  CameraPlayer.cpp  CameraPlayer.h  Renderer.cpp  Renderer.h
src/world/: Biome.cpp  Biome.h  BiomeField.cpp  BiomeField.h  Block.cpp  Block.h  Chunk.cpp  Chunk.h  Cubemap.cpp  Cubemap.h  Entity.cpp  Entity.h  Skybox.cpp  Sprite.cpp  Sprite.h  Tilemap.cpp  Tilemap.h  World.cpp  World.h  WorldGeneration.cpp  WorldGeneration.h
